- fix bug wrap word on long text

--- a/app/assets/less/plugin.less
+++ b/app/assets/less/plugin.less
@@ -42,4 +42,11 @@
     color: #000;
     text-shadow: 0 1px 0 #fff;
 }
+.wordwrap { 
+   white-space: pre-wrap;      /* CSS3 */   
+   white-space: -moz-pre-wrap; /* Firefox */    
+   white-space: -pre-wrap;     /* Opera <7 */   
+   white-space: -o-pre-wrap;   /* Opera 7 */    
+   word-wrap: break-word;      /* IE */
+}
 /* End pkpopup css */
